--- a/app/src/app/MAIN/film-batman/film-batman.component.html
+++ b/app/src/app/MAIN/film-batman/film-batman.component.html
@@ -1,8 +1,8 @@
 <header>
   <h2>Тёмный Рыцарь</h2>
 </header>
-<video width="900" height="600" controls="controls">
-  <source src="video.mp4" type="video/mp4">
+<video width="900" height="600" controls="controls" class="vidos" poster="https://million-wallpapers.ru/wallpapers/5/51/439245382723136/betmen-temnyj-rycar.jpg">
+  <source src="assets/video.mp4" type="video/mp4">
 </video>
 <div class="descript">
   <ul>
